<resources>
    <string name="app_name">kazan-manager-ktl</string>
    <string name="tv_welcome_text">Добро пожаловать</string>
    <string name="tv_welcome_description_text">Войдите в аккаунт</string>
    <string name="et_login_hint">ИМЯ</string>
    <string name="et_password_hint">ПАРОЛЬ</string>
    <string name="cb_remember_text">Запомнить</string>
    <string name="btn_login_text">Войти</string>
    <string name="setting_text">Настройки</string>
    <string name="save_text">Сохранить</string>
    <string name="ip_address_server_text">IP адрес сервера</string>
    <string name="forgot_psw_text">Забыли пароль?</string>
    <string name="create_account_text">Создать аккаунт</string>
</resources>