<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/loginBackground"
    tools:context=".LoginActivity">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/imv_logo_login"
        android:layout_width="70dp"
        android:layout_height="70dp"
        style="@style/imvLogo"
        android:adjustViewBounds="true"
        android:scaleType="centerInside"
        app:layout_constraintStart_toStartOf="@+id/glv_left"
        app:layout_constraintTop_toTopOf="@+id/glh_logo"
        app:shapeAppearanceOverlay="@style/circleImageView" />

    <TextView
        android:id="@+id/tv_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/tvWelcomeText"
        android:text="@string/tv_welcome_text"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/glv_left"
        app:layout_constraintTop_toTopOf="@+id/glh_text" />

    <TextView
        android:id="@+id/tv_welcome_description"
        style="@style/tvWelcomeDescriptionText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/tv_welcome_description_text"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/glv_left"
        app:layout_constraintTop_toBottomOf="@+id/tv_welcome" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etl_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/etlLoginActivity"

        app:layout_constraintEnd_toStartOf="@+id/glv_right"
        app:layout_constraintStart_toStartOf="@+id/glv_left"
        app:layout_constraintTop_toTopOf="@+id/glh_login">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_login"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            style="@style/etLoginActivity"
            android:layout_marginBottom="13dp"
            android:hint="@string/et_login_hint"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etl_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/etlLoginActivity"

        app:layout_constraintEnd_toStartOf="@+id/glv_right"
        app:layout_constraintStart_toStartOf="@+id/glv_left"
        app:layout_constraintTop_toBottomOf="@+id/etl_login">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            style="@style/etLoginActivity"
            android:layout_marginBottom="13dp"
            android:hint="@string/et_password_hint"/>
    </com.google.android.material.textfield.TextInputLayout>

    <CheckBox
        android:id="@+id/cb_Remember"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/cbRemember"
        android:minHeight="48dp"
        android:layout_marginBottom="13dp"
        android:text="@string/cb_remember_text"


        app:layout_constraintEnd_toStartOf="@+id/glv_right"
        app:layout_constraintTop_toBottomOf="@+id/etl_password" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_login"
        android:layout_width="0dp"
        android:layout_height="70dp"
        style="@style/btnLogin"
        android:text="@string/btn_login_text"

        android:textSize="19sp"
        android:gravity="start|center"

        app:layout_constraintEnd_toStartOf="@+id/glv_right"
        app:layout_constraintStart_toStartOf="@+id/glv_left"
        app:layout_constraintTop_toBottomOf="@+id/cb_Remember" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_setting"
        android:layout_width="60dp"
        android:layout_height="60dp"

        style="@style/btnSetting"
        android:background="@drawable/ic_settings"
        android:contentDescription="@string/app_name"
        app:layout_constraintBottom_toTopOf="@+id/glh_setting"
        app:layout_constraintEnd_toStartOf="@+id/glv_right"
        app:layout_constraintStart_toStartOf="@+id/glv_left" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glh_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.02" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glv_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.07"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glh_setting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.98" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glv_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.93" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glh_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.18" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glh_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.32" />


</androidx.constraintlayout.widget.ConstraintLayout>